--- a/services/data_service/package.json
+++ b/services/data_service/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "uuid": "^3.3.3",
