--- a/services/data_service/package.json
+++ b/services/data_service/package.json
@@ -10,7 +10,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1",
+    "mysql2": "^2.2.5",
     "uuid": "^3.3.3",
     "wait-port": "^0.2.2"
   },
