--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,22 +27,22 @@ services:
       - "3000:3000"
 
   frontend:
-    build:
-      context: './frontend'
-      dockerfile: Dockerfile
+    volumes:
+      - './frontend_php/src:/var/www/app/'
+    image: romeoz/docker-apache-php
     networks:
       - iz_net
     ports:
       - "80:80"
 
-  api:
-    build:
-      context: './api'
-      dockerfile: Dockerfile
-    networks:
-      - iz_net
-    ports:
-      - "4000:4000"
+  #api:
+  #  build:
+  #    context: './api'
+  #    dockerfile: Dockerfile
+  #  networks:
+  #    - iz_net
+  #  ports:
+  #   - "4000:4000"
 
 networks:
   iz_net:
