--- a/services/data_service/package.json
+++ b/services/data_service/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2",
     "uuid": "^3.3.3",
     "wait-port": "^0.2.2"
   },
