--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.7"
 services:
   mysql:
-    container_name: iz_data_mysql
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
@@ -16,15 +15,36 @@ services:
       MYSQL_DATABASE: iz_data
 
   data:
-    container_name: iz_data_service
     build: 
       context: './services/data_service'
+      dockerfile: Dockerfile
+    networks:
+      - iz_data
+    ports:
+      - "3000:3000"
+    environment: 
+      NODE_ENV: production
+    depends_on: 
+      - mysql
+    
+  frontend:
+    volumes:
+      - './frontend_php/src:/var/www/app/'
+    image: romeoz/docker-apache-php
+    networks:
+      - iz_net
+    ports:
+      - "80:80"
+    
+  api:
+    build:
+      context: './api'
       dockerfile: Dockerfile
     networks:
       - iz_net
       - iz_data
     ports:
-      - "3000:3000"
+      - "4000:4000"
     environment: 
       NODE_ENV: production
 
