--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     networks:
       - iz_data
     volumes:
-      - ./volumes/iz-mysql-data:/var/lib/mysql
+      - ./volumes/iz-mysql-data:/var/lib/mysql:rw
       - ./volumes/my.cnf:/etc/mysql/conf.d/my.cnf
       - ./volumes/iz-mysql-config/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment: 
