--- a/services/store_service/package.json
+++ b/services/store_service/package.json
@@ -2,9 +2,10 @@
   "name": "store_service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon .s"
   },
   "author": "",
   "license": "ISC",
