--- a/services/auth_service/package.json
+++ b/services/auth_service/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "wait-port": "^0.2.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
