authorization (login/register)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,8 @@ services:
     networks:
       - iz_auth
       - iz_api
+    ports:
+      - "3100:3100"
     environment: 
       NODE_ENV: production
     depends_on: 
