--- a/services/auth_service/package.json
+++ b/services/auth_service/package.json
@@ -2,16 +2,20 @@
   "name": "auth_service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "node-rsa": "^1.1.1",
     "sequelize": "^6.6.2",
     "wait-port": "^0.2.9"
   },
