--- a/api/package.json
+++ b/api/package.json
@@ -10,8 +10,9 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
-    "jsonwebtoken": "^8.5.1"
+    "form-data": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
