--- a/services/store_service/package.json
+++ b/services/store_service/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-      "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2"
   }
 }
