--- a/services/auth_service/package.json
+++ b/services/auth_service/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
-    "dotenv": "^9.0.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
@@ -20,7 +20,5 @@
     "sequelize": "^6.6.2",
     "wait-port": "^0.2.9"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+  "devDependencies": {}
 }
